data/derived/comb/progs/unify/prog6810.ml.out
Characters 92-100:
  | false -> [digitsOfInt (n / 10)] @ [n mod 10];;
                                       ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
